# stm32f3-hc-sr04

./: Cargo.toml  README.md  openocd.gdb
src/: main.rs
