[package]
name = "stm32f3-hc-sr04"
version = "0.1.0"
authors = ["KarasevNS <karasevns@tecon.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.7.1"
cortex-m-rt = "0.6.13"
panic-itm = "0.4.0"
stm32f3-discovery = "0.6"
